# Weather_Paris

./: README.md
infra/: docker-compose.yaml  nginx.conf
weather_site/: .env.example  Dockerfile  pyproject.toml
weather_site/weather/: views.py
weather_site/weather_site/: settings.py
