[tool.poetry]
name = "weather-paris"
version = "0.1.0"
description = ""
authors = ["NikSen <niksen09@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
requests = "^2.32.3"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
